fix spacing

--- a/stylesheets/custom.css
+++ b/stylesheets/custom.css
@@ -9,6 +9,7 @@
     letter-spacing: 0.25em;
     text-align: center;
     padding-top: 10%;
+    padding-left: 2%;
 }
 
 @media (min-width: 992px) {
